--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 click==6.7
 impute==0.0.1
 lxml==3.7.3
-numpy==1.12.1+mkl
-rpy2==2.7.8
+matplotlib==2.0.0
+numpy==1.12.1
+pandas==0.20.1
+rpy2>=2.7.8 --only-binary=rpy2
 scipy==0.19.0
 six==1.10.0
