--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 click>=6.7
+click-plugins>=1.1.1
 gdal>=2.2.3
 lxml>=3.7.3
 matplotlib>=2.0.0
 numpy>=1.12.1
 pandas>=0.20.1
-rpy2>=2.7.8
+rpy2>=2.7.8,<=2.9.5
 scikit-learn>=0.20.2
 scipy>=0.19.0
 six>=1.10.0
