--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+affine>=2.3.0
 click>=6.7
 click-plugins>=1.1.1
 gdal>=2.2.3
@@ -5,6 +6,7 @@ lxml>=3.7.3
 matplotlib>=2.0.0
 numpy>=1.12.1
 pandas>=0.20.1
+rasterio>=1.1.0
 rpy2>=2.7.8,<=2.9.5
 scikit-learn>=0.20.2
 scipy>=0.19.0
