--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,13 +35,13 @@ Homepage = "https://github.com/lemma-osu/pynnmap"
 Source = "https://github.com/lemma-osu/pynnmap"
 
 [tool.hatch.version]
-path = "pynnmap/__about__.py"
+path = "src/pynnmap/__about__.py"
 
 [tool.hatch.build.targets.wheel]
-packages = ["pynnmap"]
+packages = ["src/pynnmap"]
 
 [tool.hatch.build.targets.sdist]
-include = ["."]
+include = ["/src"]
 
 [tool.hatch.envs.default]
 dependencies = ["pre-commit"]
@@ -51,10 +51,10 @@ dependencies = ["pytest", "pytest-cov"]
 
 [tool.hatch.envs.test.scripts]
 all = "pytest . {args} --doctest-modules"
-coverage = "pytest . --cov=pynnmap {args} --doctest-modules"
+coverage = "pytest . --cov=src/pynnmap {args} --doctest-modules"
 
 [tool.pytest.ini_options]
-pythonpath = "."
+pythonpath = "src/"
 
 [tool.ruff]
 target-version = "py38"
