WIP: Fix remaining linting errors associated with PT and SIM checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,11 +82,11 @@ select = [
     "FA",
     "UP",
     "ISC",
-    # "PT",
+    "PT",
     "NPY",
     "Q",
     "RET",
-    # "SIM",
+    "SIM",
     "PERF",
 ]
 
