--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,8 +26,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install hatch
 
-      - name: Run tests
-        run: hatch run test:all
+      # - name: Run tests
+      #   run: hatch run test:all
   lint:
     runs-on: ubuntu-latest
 
